--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,9 +1,10 @@
 !!! Strict
 %html
   %head
-    %title= [@title, "Padrino Sample Blog"].compact.join(" | ")
+    %title IverCore TV Rss
     = stylesheet_link_tag 'http://yui.yahooapis.com/3.1.1/build/cssreset/reset-min.css', 'application'
-    = javascript_include_tag 'jquery', 'application'
+    = stylesheet_link_tag 'ui-lightness/jquery-ui-1.8.4.custom'
+    = javascript_include_tag 'jquery-1.4.2.min', 'jquery-ui-1.8.4.custom.min', 'application'
     = yield_content :include
   %body
     %div.section
