cleaned up rss, fixed a but with the importer, option to reindex episodes

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -10,4 +10,5 @@
     %div.section
       %ul.main_menu
         %li= link_to('Home', url(:shows, :index))
+        %li= link_to('Reindex', url(:episodes, :reindex))
     = yield
