Did some todo tasks

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,5 +11,5 @@
       %ul.main_menu
         %li= link_to('Home', url(:shows, :index))
         %li= link_to('Reimport All Episodes', url(:episodes, :reimport_episodes))
-        %li= link_to('Reimport All Show Info', '#')
+        %li= link_to('Reimport All Show Info', url(:shows, :reimport_show_info))
     = yield
