--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -15,6 +15,21 @@ h2
 .clear
   clear: both
 
+@mixin notice-style
+  padding: 10px
+  text-align: center
+  font-size: 15px
+  font-weight: bolder
+  margin: 10px
+
+#error-message
+  @include notice-style
+  background-color: #ef0808
+
+#notice-message
+  @include notice-style
+  background-color: #7ad78c
+
 span
   float: left
 
