changed password field to a password box

--- a/app/views/authentication/login.html.haml
+++ b/app/views/authentication/login.html.haml
@@ -5,6 +5,6 @@
   .clear
   %div
     %span.name Password
-    %span= text_field_tag :password
+    %span= password_field_tag :password
   .clear
   %div= submit_tag 'search'
