Fixed a couple things that have been annoying me for ages

--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -41,13 +41,16 @@ span
 
   .num_index
     width: 50px
+    padding: 3px
 
   .search_name
     width: 300px
+    padding: 3px
 
-  .highlight
+  .highlight span
     background-color: #8dbfd9
 
 .main_menu
   a
     text-decoration: none
+
