--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -5,12 +5,14 @@ body
 h1
   font-size: 18px
   font-weight: bold
-  padding: 0 0 10px 0
+  margin: 10px
+  padding: 10px
 
 h2
   font-size: 16px
   font-weight: bold
-  padding: 0 0 10px 0
+  margin: 10px
+  padding: 10px
 
 .clear
   clear: both
@@ -56,4 +58,12 @@ span
 .main_menu
   a
     text-decoration: none
+
+.episode
+  margin: 10px
+  padding: 10px
+
+  p
+    .description
+
 
