--- a/app/views/shows/index.html.haml
+++ b/app/views/shows/index.html.haml
@@ -3,21 +3,21 @@
 
 %div.section
   %h2 Episode Search
-  - form_tag url(:episodes, :calendar, :format => :xml), :method => :get do
+  - form_tag calendar_path, :method => :get do
     %div
       %span.name From
-      %span= text_field_tag :from_date, :id => 'from_date', :value => (Date.today - 7)
+      %span= text_field_tag :from_date, (Date.today - 1), :id => 'from_date'
     .clear
     %div
       %span.name To
-      %span= text_field_tag :to_date, :id => 'to_date', :value => (Date.today - 1)
+      %span= text_field_tag :to_date, (Date.today - 7), :id => 'to_date'
     .clear
     %div= submit_tag 'search'
 .clear
 
 %div.section
   %h2 Show Search
-  - form_tag url(:shows, :search), :method => :get do
+  - form_tag search_shows_path, :method => :get do
     %div
       %span.name Show Name
       %span= text_field_tag :show_name
@@ -30,7 +30,7 @@
     - @searched_shows.each do |searched_show|
       %span.search_name
         = link_to(searched_show[:name], searched_show[:url], :target => '_blank')
-      %span= button_to('add', url(:shows, :create, :"show[tvr_show_id]" => searched_show[:tvr_show_id]), :method => :post)
+      %span= button_to('add', shows_path(:"show[tvr_show_id]" => searched_show[:tvr_show_id]), :method => :post)
       .clear
 
 - if @shows
@@ -43,13 +43,13 @@
         %li{:class => change ? 'highlight' : '' }
           %span.num_index= "#{i}."
           %span.name
-            = link_to(show.name, url(:episodes, :index, :id => show.id))
+            = link_to(show.name, episode_path(show.id))
+            = link_to("rss", episode_path(:format => :rss, :id => show.id))
           %span.name
-            = link_to('Reimport Episode Info', url(:episodes, :reimport_episodes, :tvr_show_id => show.tvr_show_id))
+            = link_to('Reimport Episode Info', reimport_episode_path(show.tvr_show_id))
           %span.name
-            = link_to('Update Show Info', url(:shows, :reimport_show_info, :tvr_show_id => show.tvr_show_id))
-          %span= button_to('del', url(:shows, :destroy, :id => show.id), :method => :delete)
+            = link_to('Update Show Info', reimport_show_path(show.tvr_show_id))
+          %span= button_to('del', url_for(:action => 'destroy', :controller => 'shows',:id => show.id), :method => :delete)
         - change = !change
         - i += 1
         .clear
-
