--- a/app/views/shows/confirm.html.haml
+++ b/app/views/shows/confirm.html.haml
@@ -1,3 +1,3 @@
 = "Really delete #{@show.name}"
-= button_to('Yes', url(:shows, :destroy, :id => @show.id, :confirm => 'true'), :method => :delete)
-= button_to('No', url(:shows, :index), :method => :get)
+= button_to('Yes', url_for(:action => 'destroy', :controller => 'shows',:id => @show.id, :confirm => 'true'), :method => :delete)
+= button_to('No', shows_path, :method => :get)
