--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -38,8 +38,12 @@ span
   line-height: 25px
   padding: 3px
 
-.section
-  margin: 0 0 30px 20px
+table
+  border: 1px solid black
+  tr
+    border: 1px solid black
+    td
+      border: 1px solid black
 
   .name
     width: 200px
@@ -55,7 +59,7 @@ span
     width: 300px
     padding: 3px
 
-  .highlight span
+  .highlight
     background-color: #8dbfd9
 
 .main_menu
