--- a/app/views/shows/index.html.haml
+++ b/app/views/shows/index.html.haml
@@ -1,59 +1,64 @@
 %div.section
   %h1 Shows
 
-%div.section
-  %h2 Episode Search
-  = form_tag calendar_path, :method => :get do
-    %div
-      %span.name From
-      %span= text_field_tag :from_date, (Date.today - 7), :id => 'from_date'
-    .clear
-    %div
-      %span.name To
-      %span= text_field_tag :to_date, (Date.today - 1), :id => 'to_date'
-    .clear
-    %div= submit_tag 'search'
-.clear
+%h2 Episode Search
+= form_tag calendar_path, :method => :get do
+  %table
+    %tr
+      %td.name
+        From
+        %br/
+        = text_field_tag :from_date, (Date.today - 7), :id => 'from_date'
+      %td.name
+        To
+        %br/
+        = text_field_tag :to_date, (Date.today - 1), :id => 'to_date'
+    %tr
+      %td{:colspan => 2}= submit_tag 'search'
 
-%div.section
-  %h2 Show Search
-  = form_tag search_shows_path, :method => :get do
-    %div
-      %span.name Show Name
-      %span= text_field_tag :show_name
-    .clear
-    %div= submit_tag 'search'
+%h2 Show Search
+= form_tag search_shows_path, :method => :get do
+  %table
+    %tr
+      %td.name Show Name
+      %td= text_field_tag :show_name
+      %td= submit_tag 'search'
 
 - if @searched_shows
-  %div.section
-    %h2 Search Results
+  %h2 Search Results
+  %table
     - @searched_shows.each do |searched_show|
-      %span.search_name
-        = link_to(searched_show[:name], searched_show[:url], :target => '_blank')
-      %span= button_to('add', shows_path(:"show[tvr_show_id]" => searched_show[:tvr_show_id]), :method => :post)
-      .clear
+      %tr
+        %td= link_to(searched_show[:name], searched_show[:url], :target => '_blank')
+        %td= button_to('add', shows_path(:"show[tvr_show_id]" => searched_show[:tvr_show_id]), :method => :post)
 
 - if @shows
-  %div.section
-    %ul
-      - change = false
-      - i = 1
-      %h2= "Current Shows (#{@shows.size})"
-      - @shows.each do |show|
-        %li{:class => change ? 'highlight' : '' }
-          %span.num_index= "#{i}."
-          %span.name
-            = link_to(show.name, episode_path(show.id))
-            = link_to("rss", episode_path(:format => :rss, :id => show.id))
-          %span.search_as
-            = form_tag url_for(:controller => "shows", :action => "update", :id => show.id), :method => :put do
-              = text_field_tag "show[search_as]", search_name(show)
-              = submit_tag 'set'
-          %span.name
-            = link_to('Reimport Episode Info', reimport_episode_path(show.tvr_show_id))
-          %span.name
-            = link_to('Update Show Info', reimport_show_path(show.tvr_show_id))
-          %span= button_to('del', url_for(:action => 'destroy', :controller => 'shows',:id => show.id), :method => :delete)
-        - change = !change
-        - i += 1
-        .clear
+  %h2= "Current Shows (#{@shows.size})"
+  %table
+    %tr
+      %td &nbsp;
+      %td Show
+      %td Search As
+      %td Reimport Episode Info
+      %td Update Show Info
+      %td Del
+    - change = false
+    - i = 1
+    - @shows.each do |show|
+      %tr
+        %td.num_index= "#{i}."
+        %td.name{:class => change ? 'highlight' : '' }
+          = link_to(show.name, episode_path(show.id))
+          = link_to("rss", episode_path(:format => :rss, :id => show.id))
+        %td.search_as{:class => change ? 'highlight' : '' }
+          = form_tag url_for(:controller => "shows", :action => "update", :id => show.id), :method => :put do
+            = text_field_tag "show[search_as]", search_name(show)
+            = submit_tag 'set'
+        %td.name{:class => change ? 'highlight' : '' }
+          = link_to('Reimport Episode Info', reimport_episode_path(show.tvr_show_id))
+        %td.name{:class => change ? 'highlight' : '' }
+          = link_to('Update Show Info', reimport_show_path(show.tvr_show_id))
+        %td{:class => change ? 'highlight' : '' }
+          = button_to('del', url_for(:action => 'destroy', :controller => 'shows',:id => show.id), :method => :delete)
+      - change = !change
+      - i += 1
