--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -34,23 +34,23 @@ h2
 
 span
   float: left
-  border: 1px solid black
   line-height: 25px
   padding: 3px
 
-table
+table.borders
   border: 1px solid black
   tr
     border: 1px solid black
     td
       border: 1px solid black
+      padding: 3px
 
   .name
     width: 200px
 
   .search_as
     width: 230px
-    
+
   .num_index
     width: 50px
     padding: 3px
@@ -73,4 +73,7 @@ table
   p
     .description
 
-
+#login
+  margin: 200px auto
+  width: 300px
+  height: 100px
