--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     %title IverCore TV Rss
     = stylesheet_link_tag 'reset-min', 'application'
     = stylesheet_link_tag 'ui-lightness/jquery-ui-1.8.4.custom'
-    = javascript_include_tag 'jquery-1.4.2.min', 'jquery-ui-1.8.4.custom.min', 'application'
+    = javascript_include_tag 'jquery.min', 'jquery-ui-1.8.4.custom.min', 'jquery_ujs', 'application'
     = #yield_content :include
   %body
     - if flash[:alert]
@@ -15,6 +15,7 @@
       .section
         %ul.main_menu
           %li= link_to('Home', shows_path)
+          %li |
           %li= link_to('Reimport All Episodes', reimport_episodes_path)
           %li= link_to('Reimport All Show Info', reimport_shows_path)
           %li= link_to('Cancelled Shows', cancelled_shows_path)
